Actions
Bug #8332
closedkrb5: misleading-indentation
Start date:
2017-06-05
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors from gcc 6:
dump.c: In function 'load_db': dump.c:2837:5: error: this 'else' clause does not guard... [-Werror=misleading-indentation] else ^~~~ dump.c:2840:2: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else' if (log_ctx && log_ctx->iproprole) { ^~ cc1: all warnings being treated as errors *** Error code 1 dmake: Fatal error: Command failed for target `dump.o' Current working directory /code/illumos-gate/usr/src/cmd/krb5/kadmin/dbutil server_stubs.c: In function 'create_principal_2_svc': server_stubs.c:571:4: error: this 'if' clause does not guard... [-Werror=misleading-indentation] if (errmsg != NULL) ^~ server_stubs.c:574:3: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' if (policy_migrate && (ret.code == 0)) { ^~ cc1: all warnings being treated as errors *** Error code 1 dmake: Fatal error: Command failed for target `server_stubs.o' Current working directory /code/illumos-gate/usr/src/cmd/krb5/kadmin/server klist.c: In function 'show_credential': klist.c:633:2: error: this 'else' clause does not guard... [-Werror=misleading-indentation] else ^~~~ klist.c:635:3: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else' fputs(gettext("renew until "), stdout); ^~~~~ cc1: all warnings being treated as errors *** Error code 1 dmake: Fatal error: Command failed for target `klist.o' Current working directory /code/illumos-gate/usr/src/cmd/krb5/klist do_as_req.c: In function 'process_as_req': do_as_req.c:481:2: error: this 'if' clause does not guard... [-Werror=misleading-indentation] if (errcode) ^~ do_as_req.c:484:6: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' audit_krb5kdc_as_req(&from_in4, (in_port_t)from->port, ^~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors *** Error code 1 dmake: Fatal error: Command failed for target `do_as_req.o' Current working directory /code/illumos-gate/usr/src/cmd/krb5/krb5kdc
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 796b8631498f69a3e21b5c35aee280499f64420e
commit 796b8631498f69a3e21b5c35aee280499f64420e Author: Toomas Soome <tsoome@me.com> Date: 2017-06-14T00:05:33.000Z 8332 krb5: misleading-indentation Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Gordon Ross <gwr@nexenta.com>
Actions