usr/src/cmd/krb5/klist/klist.c
@@ -2,7 +2,6 @@
  * Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
  * Use is subject to license terms.
  */
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
 
 /*
  * clients/klist/klist.c
@@ -632,7 +631,7 @@ show_credential(cred)
 		fputs("\t",stdout);
 	else
 		fputs(", ",stdout);
-		fputs(gettext("renew until "), stdout);
+	fputs(gettext("renew until "), stdout);
 	printtime(cred->times.renew_till);
 	extra_field += 2;
     }
